style.css
* {
  margin: 0;
  padding: 0%;
}

html {
  background-color: #e5e5e5;
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
  font-style: normal;
  overflow-y: scroll;
  overflow-x: hidden;
  box-sizing: border-box;
}

main {
  box-sizing: border-box;
}

.headline {
  display: flex;
  flex-direction: column;
  background-image: url("background.svg");
  background-repeat: no-repeat;
  background-size: auto;
  border: 1px solid #fff;
  border-bottom-left-radius: 80px;
  background-color: #fff;
  padding-left: 24px;
  padding-right: 24px;
  margin-bottom: 114px;
  height: 604px;
  width: 325px;
}

ul {
  list-style: none;
}

header {
  display: flex;
  justify-content: space-between;
  padding-right: 24px;
  padding-left: 26px;
  padding-top: 10px;
  background-color: #fff;
  border-bottom: 1px solid #fff;
  width: 325px;
}

.menu-button {
  cursor: pointer;
}

h1 {
  display: flex;
  align-items: center;
  font-size: 42px;
  color: #172b4d;
  font-weight: 700;
  line-height: 52px;
  padding-top: 40px;
  padding-bottom: 12px;
}

.headline-intro p {
  padding-top: 0;
  line-height: 22px;
  color: #344563;
  padding-bottom: 12px;
}

h2 {
  font-size: 36px;
  color: #172b4d;
  padding-bottom: 10px;
  padding-top: 5px;
  margin: 0;
  line-height: 44px;
}

h3 {
  color: #7f8cff;
  font-size: 16px;
  margin-top: 0%;
  margin-bottom: 0%;
  padding-bottom: 12px;
}

h5 {
  color: #7a869a;
}

.icons ul {
  display: flex;
  align-items: flex-start;
  padding: 0;
  justify-content: space-between;
  width: 170px;
}

.headline-intro {
  padding-top: 4rem;
}

.works {
  display: grid;
  grid-template-columns: 375px;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  width: 100vw;
  background-color: #e5e5e5;
  justify-content: center;
}

.date {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  padding-bottom: 20px;
}

.canopy {
  padding-right: 2em;
  font-size: 13px;
  font-weight: 600;
}

.year {
  color: #7a869a;
  font-size: 13px;
  font-weight: 600;
  list-style: disc;
  padding-right: 2em;
}

.card1,
.card2,
.card3,
.card4 {
  background-color: #fff;
  display: flex;
  flex-direction: column;
  margin-bottom: 75px;
  border-radius: 1rem;
  border: 1px solid #dadadb;
  margin-left: 24px;
  margin-right: 24px;
  padding: 16px;
}

.card1,
.card3 {
  padding-bottom: 0;
  height: 552px;
}

.selection-text {
  font-size: 15px;
  line-height: 24px;
  width: 293px;
  padding-bottom: 12px;
}

.work-buttons {
  display: flex;
  margin: 0%;
  padding-left: 0%;
  width: 203px;
  justify-content: space-between;
}

.project-button,
.resume-button,
.form-button {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  width: 130px;
  border-radius: 8px;
  border: 1px solid;
  border-color: #396df2;
  margin-top: 21px;
  padding: 14px;
  font-size: 17px;
  font-weight: 600;
  color: #396df2;
  background-color: white;
}

.about {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 250px;
  border: 1px solid #fff;
  border-top-right-radius: 80px;
  justify-content: center;
}

.about h2 {
  padding-top: 114px;
  width: 327px;
}

.about p {
  line-height: 24px;
}

.about .icons {
  margin-left: 10px;
  height: 45px;
}

.resume-button {
  width: 170px;
  padding: 13px;
  margin-bottom: 20px;
}

.about-dropdown {
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  font-size: 20px;
  font-weight: 600;
}

.language {
  padding-bottom: 10px;
  margin: 0;
}

.dropdown-text,
.dropdown-text-no-border {
  padding-top: 21px;
  padding-bottom: 21px;
  border-bottom: 1px solid #dfe1e6;
  cursor: pointer;
}

.dropdown-text-no-border {
  border: none;
  padding-bottom: 40px;
}

.down-arrow,
.right-arrow {
  float: right;
  margin-top: 8px;
  margin-right: 40px;
}

.centered {
  display: grid;
  grid-template-columns: 375px;
  grid-template-rows: 1fr;
  width: 100vw;
  background-color: #e5e5e5;
  justify-content: center;
}

.centered-headline {
  display: grid;
  grid-template-columns: 100vw;
  grid-template-rows: 50px 505px;
  width: 100vw;
  background-color: #e5e5e5;
  justify-content: center;
  margin-bottom: 215px;
  justify-items: center;
}

.bottom-form {
  display: grid;
  grid-template-columns: 375px;
  grid-template-rows: 1fr;
  width: 100%;
  justify-content: center;
  background-color: #e5e5e5;
  box-sizing: border-box;
}

.bottom-page {
  display: flex;
  flex-direction: column;
  background-color: #6070ff;
  background-image: url("background2.png");
  background-repeat: no-repeat;
  background-position-x: 150px;
  background-position-y: 18px;
  background-size: 60%;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: -120px;
  border-top-left-radius: 80px;
  justify-content: center;
  align-items: center;
}

.bottom-page h2 {
  color: #fff;
  font-size: 40px;
  padding-bottom: 12px;
  padding-top: 103px;
  line-height: 52px;
}

.bottom-p {
  color: #ebebff;
  font-size: 20px;
  line-height: 28px;
  font-weight: 400;
  padding-bottom: 60px;
  text-align: center;
}

input,
textarea {
  font-family: "Poppins", sans-serif;
  font-size: 17px;
  color: #172b4d;
  width: 327px;
  height: 48px;
  box-sizing: border-box;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  margin-bottom: 20px;
  padding-inline: 16px;
}

textarea {
  height: 170px;
  margin-bottom: -10px;
  font-size: 15px;
  padding-top: 16px;
}

.form-button {
  margin-bottom: 40px;
  color: #6070ff;
  width: 140px;
}

.project-button:hover,
.resume-button:hover {
  border-color: #6070ff;
  color: white;
  background-color: #6070ff;
}

.menu-desktop {
  display: none;
}

.card5,
.card6,
.card7,
.card8 {
  display: none;
}

.language-desktop {
  display: none;
}

@media only screen and (min-width: 768px) {
  .headline,
  .centered,
  .centered-headline {
    width: 100%;
    border: none;
    background-size: 98%;
    height: 98vh;
    border-bottom-left-radius: 80px;
    padding: 0;
    margin-bottom: 60px;
    box-sizing: border-box;
  }

  .headline {
    background-image: url(Headerbg.svg);
  }

  .centered {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 1fr;
    width: 100%;
    background-color: #e5e5e5;
    justify-content: center;
  }

  .logo {
    padding-top: 25px;
    transition: transform 1s;
  }

  .logo:hover {
    transform: scale(1.2);
  }

  header {
    padding-top: 25px;
    height: 60px;
    width: 100%;
    justify-content: space-around;
    position: fixed;
  }

  h1 {
    padding-top: 100px;
    padding-left: 18%;
  }

  .menu-button {
    display: none;
  }

  .menu-desktop {
    display: flex;
    font-weight: 600;
    padding-top: 25px;
    padding-bottom: 100px;
    padding-left: 22%;
  }

  .menu-links {
    padding-right: 20px;
    transition: transform 0.5s;
  }

  .menu-links:hover {
    transform: scale(1.2);
  }

  .desktop-links {
    display: flex;
    font-size: 15px;
  }

  .desktop-links a {
    text-decoration: none;
  }

  .desktop-links a:visited {
    color: black;
  }

  .headline-intro p {
    padding-left: 18%;
    padding-right: 18%;
    font-size: 20px;
    line-height: 28px;
  }

  .headline h3,
  .icons {
    padding-left: 18%;
  }

  .card1,
  .card2,
  .card3,
  .card4 {
    display: none;
  }

  .works {
    grid-template-columns: 80%;
    margin-top: 100px;
  }

  .card5,
  .card6,
  .card7,
  .card8 {
    display: flex;
    flex-direction: row;
    background-color: #fff;
    height: auto;
    align-content: center;
    padding-left: 20px;
    border-radius: 8px;
    margin-bottom: 100px;
  }

  .poster {
    max-width: 50%;
    padding: 20px 2px;
    transition: transform 1s;
  }

  .poster:hover {
    transform: translate(-15px, 1px);
  }

  .tag {
    height: 24px;
  }

  .card6,
  .card8 {
    padding-left: 20px;
  }

  .card6 img,
  .card8 img {
    padding-right: 22px;
  }

  .info-right-side {
    display: flex;
    flex-direction: column;
    padding-top: 47px;
    width: 48%;
    padding-left: 10px;
  }

  .info-right-side p {
    display: flex;
  }

  .info-right-side h2 {
    font-size: 2em;
  }

  .selection-text {
    font-size: 15px;
    width: 100%;
  }

  ul.work-buttons {
    flex-wrap: wrap;
    width: fit-content;
  }

  .work-buttons {
    display: flex;
    align-items: center;
    flex-grow: 0;
    justify-content: flex-start;
  }

  .card5 ul,
  .card7 ul {
    gap: 10px;
  }

  .dated {
    font-size: 18px;
  }

  .about {
    display: grid;
    grid-template-columns: 40% 60%;
  }

  .about-dropdown {
    width: 82%;
    padding-top: 14%;
    padding-left: 3%;
  }

  .language {
    display: none;
  }

  .language-desktop {
    display: flex;
    justify-content: flex-start;
    gap: 10px;
  }

  .rotate {
    transition: transform 1s;
  }

  .rotate:hover {
    transform: rotate(-20deg);
  }

  .resume-button {
    margin-top: -10px;
  }

  .container {
    padding-left: 14%;
  }

  .container .icons {
    padding-left: 0;
  }

  .container p {
    font-size: 16px;
    padding-bottom: 12px;
  }

  .bottom-form {
    grid-template-columns: 100%;
  }

  .bottom-p {
    width: 569px;
  }

  input,
  textarea {
    width: 447px;
  }

  .form-button {
    float: right;
    position: relative;
    left: -35%;
  }

  .bottom-page {
    padding-top: 40px;
    background-image: url(form.svg);
    background-size: 85%;
    background-position-x: 75px;
    background-position-y: 79px;
  }
}

